# issue-review

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  analysis_store.py  comment_generator.py  config.py  data_sources.py  docker-compose.yml  main.py  prompts.py  pyproject.toml  report_generator.py
agents/: __init__.py  coordinator.py  graph.py  personas.py  platform.py  portfolio.py  report_graph.py  state.py  technical.py
data/: __init__.py  catalog.yaml  coverage.yaml  features.yaml  personas.yaml
indexer/: __init__.py  content.py  coverage.py  embeddings.py  init.sql  sync.py
llm/: __init__.py  callbacks.py  client.py  guardrails.py  parsing.py  tools.py
tools/: __init__.py  features.py  research.py
